feat: 实现桌面布局和侧边栏搜索功能
- 在 `lib/ui/layout.dart` 中添加了桌面优先的 RSS 阅读布局常量。
- 在 `lib/utils/platform.dart` 中引入了平台检测工具。
- 增强了 `ArticleList` 以处理基于桌面布局的导航。
- 重构了 `ArticleListItem` 以改进 UI 和状态管理。
- 创建了自定义的 `DesktopTitleBar` 以改善桌面窗口管理。
- 更新了 `ReaderView` 以支持桌面布局并提升文章阅读体验。
- 在侧边栏中实现了搜索功能以动态过滤订阅源。
- 添加了新的侧边栏项目小部件以提高视觉一致性。
- 更新了 `pubspec.yaml` 和 `pubspec.lock` 中的依赖项以支持新功能。

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -117,5 +117,11 @@
   "markRead": "Mark read",
   "markUnread": "Mark unread",
   "collapse": "Collapse",
-  "expand": "Expand"
+  "expand": "Expand",
+  "search": "Search",
+  "groupingAndSorting": "Grouping & Sorting",
+  "rules": "Rules",
+  "services": "Services",
+  "appPreferences": "App Preferences",
+  "about": "About"
 }
