refactor: 重构应用设置与同步服务，增强侧边栏功能
- 移除 AppSettings 中的 AppLayoutMode 并调整相关方法
- 在 AppSettings 中引入自动刷新间隔
- 增强 SyncService，添加安全的订阅源刷新方法和批量处理
- 更新 ArticleList 以支持星标文章和搜索查询
- 改进 ReaderBottomBar 的可读性和功能
- 增强 Sidebar，添加星标文章筛选和改进的搜索功能
- 重构多个 UI 组件以提高可读性和可维护性

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -114,14 +114,31 @@
 
   "star": "Star",
   "unstar": "Unstar",
+  "starred": "Starred",
   "markRead": "Mark read",
   "markUnread": "Mark unread",
   "collapse": "Collapse",
   "expand": "Expand",
+  "openInBrowser": "Open in browser",
+  "autoMarkRead": "Auto-mark as read when opened",
   "search": "Search",
   "groupingAndSorting": "Grouping & Sorting",
   "rules": "Rules",
   "services": "Services",
+  "autoRefresh": "Auto refresh",
+  "off": "Off",
+  "everyMinutes": "Every {minutes} min",
+  "@everyMinutes": {
+    "placeholders": {
+      "minutes": {
+        "type": "int"
+      }
+    }
+  },
   "appPreferences": "App Preferences",
-  "about": "About"
+  "about": "About",
+  "dataDirectory": "Data directory",
+  "copyPath": "Copy path",
+  "openFolder": "Open folder",
+  "keyboardShortcuts": "Keyboard shortcuts"
 }
