--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -324,13 +324,143 @@
   "@search": {
     "description": "search"
   },
+  "searchInContent": "搜索正文",
+  "@searchInContent": {
+    "description": "searchInContent"
+  },
   "groupingAndSorting": "分组与排序",
   "@groupingAndSorting": {
     "description": "groupingAndSorting"
   },
+  "groupBy": "分组方式",
+  "@groupBy": {
+    "description": "groupBy"
+  },
+  "groupNone": "不分组",
+  "@groupNone": {
+    "description": "groupNone"
+  },
+  "groupByDay": "按日期",
+  "@groupByDay": {
+    "description": "groupByDay"
+  },
+  "sortOrder": "排序",
+  "@sortOrder": {
+    "description": "sortOrder"
+  },
+  "sortNewestFirst": "最新优先",
+  "@sortNewestFirst": {
+    "description": "sortNewestFirst"
+  },
+  "sortOldestFirst": "最旧优先",
+  "@sortOldestFirst": {
+    "description": "sortOldestFirst"
+  },
   "rules": "规则",
   "@rules": {
     "description": "rules"
+  },
+  "addRule": "新增规则",
+  "@addRule": {
+    "description": "addRule"
+  },
+  "editRule": "编辑规则",
+  "@editRule": {
+    "description": "editRule"
+  },
+  "ruleName": "规则名称",
+  "@ruleName": {
+    "description": "ruleName"
+  },
+  "keyword": "关键字",
+  "@keyword": {
+    "description": "keyword"
+  },
+  "matchIn": "匹配范围",
+  "@matchIn": {
+    "description": "matchIn"
+  },
+  "matchTitle": "标题",
+  "@matchTitle": {
+    "description": "matchTitle"
+  },
+  "matchAuthor": "作者",
+  "@matchAuthor": {
+    "description": "matchAuthor"
+  },
+  "matchLink": "链接",
+  "@matchLink": {
+    "description": "matchLink"
+  },
+  "matchContent": "内容",
+  "@matchContent": {
+    "description": "matchContent"
+  },
+  "actions": "动作",
+  "@actions": {
+    "description": "actions"
+  },
+  "autoStar": "自动收藏",
+  "@autoStar": {
+    "description": "autoStar"
+  },
+  "autoMarkReadAction": "自动标记为已读",
+  "@autoMarkReadAction": {
+    "description": "autoMarkReadAction"
+  },
+  "enabled": "启用",
+  "@enabled": {
+    "description": "enabled"
+  },
+  "rename": "重命名",
+  "@rename": {
+    "description": "rename"
+  },
+  "edit": "编辑",
+  "@edit": {
+    "description": "edit"
+  },
+  "nameAlreadyExists": "名称已存在",
+  "@nameAlreadyExists": {
+    "description": "nameAlreadyExists"
+  },
+  "lastChecked": "上次检查",
+  "@lastChecked": {
+    "description": "lastChecked"
+  },
+  "lastSynced": "上次同步",
+  "@lastSynced": {
+    "description": "lastSynced"
+  },
+  "never": "从未",
+  "@never": {
+    "description": "never"
+  },
+  "cleanupReadArticles": "清理已读文章",
+  "@cleanupReadArticles": {
+    "description": "cleanupReadArticles"
+  },
+  "cleanupNow": "立即清理",
+  "@cleanupNow": {
+    "description": "cleanupNow"
+  },
+  "cleanedArticles": "已清理 {count} 篇文章",
+  "@cleanedArticles": {
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    },
+    "description": "cleanedArticles"
+  },
+  "days": "{days} 天",
+  "@days": {
+    "placeholders": {
+      "days": {
+        "type": "int"
+      }
+    },
+    "description": "days"
   },
   "services": "服务",
   "@services": {
